--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
+    "react-spinners": "^0.15.0",
     "tailwindcss": "3.4.16",
     "typescript": "5.7.2",
     "zustand": "^5.0.2"
