--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.0",
     "next": "15.1.0",
+    "next-sitemap": "^4.2.3",
     "postcss": "8.4.49",
     "query-string": "^9.1.1",
     "react": "19.0.0",
